<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/relativeLayoutMain"
    android:background="#202123">

    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="330dp"
        android:layout_height="60dp"

        android:text="@string/btnNewGame"
        android:textColor="#ffffff"

        android:layout_centerInParent="true"
        android:layout_above="@id/btnExit"
        android:layout_marginBottom="20dp"

        android:background="@drawable/round_button"/>

    <Button
        android:id="@+id/btnExit"
        android:layout_width="330dp"
        android:layout_height="60dp"

        android:text="@string/btnExit"
        android:textColor="#ffffff"

        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"

        android:background="@drawable/round_button"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="273dp"
        android:layout_height="81dp"

        android:layout_above="@id/btnNewGame"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="50dp"
        android:layout_alignLeft="@id/btnNewGame"
        android:fontFamily="cursive"

        android:text="@string/app_name"
        android:textColor="#fff"
        android:textSize="50sp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="219dp"
        android:layout_above="@+id/textView"
        android:layout_marginBottom="38dp"
        app:srcCompat="@drawable/ic_launcher_foreground" />

</RelativeLayout>